// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`js objects snapshot 1`] = `
"{
  \\"json\\":{
    \\"null\\":null,
    \\"integer\\":1580349408812,
    \\"float\\":0.4852754432812123,
    \\"strings\\":{
      \\"empty\\":'',
      \\"string\\":'foo',
      \\"multiline\\":'\\\\n        This\\\\n        is\\\\n        multiline\\\\n      ',
      \\"longText\\":'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fermentum suscipit hendrerit. In elit urna, suscipit sed auctor et, maximus eget nibh. Duis sollicitudin odio nisi, eu eleifend nunc molestie non. Curabitur dignissim viverra ullamcorper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent faucibus at mauris sed lacinia. Morbi tincidunt purus non facilisis lobortis. Donec molestie massa eu lacus dictum eleifend. Suspendisse vel dolor laoreet diam congue hendrerit. Aenean sed luctus lacus, ultricies faucibus dolor.'
    },
    \\"arrays\\":{
      \\"empty\\":[],
      \\"array\\":['one','two','three'],
      \\"bigarray\\":[
        0,
        1.1,
        2.2,
        3.3000000000000003,
        4.4,
        5.5,
        6.6000000000000005,
        7.700000000000001,
        8.8,
        9.9,
        11,
        12.100000000000001,
        13.200000000000001,
        14.3,
        15.400000000000002,
        16.5,
        17.6,
        18.700000000000003,
        19.8,
        20.900000000000002,
        22,
        23.1,
        24.200000000000003,
        25.3,
        26.400000000000002,
        27.500000000000004,
        28.6,
        29.700000000000003,
        30.800000000000004,
        31.900000000000002,
        33,
        34.1,
        35.2,
        36.300000000000004,
        37.400000000000006,
        38.5,
        39.6,
        40.7,
        41.800000000000004,
        42.900000000000006,
        44,
        45.1,
        46.2,
        47.300000000000004,
        48.400000000000006,
        49.50000000000001,
        50.6,
        51.7,
        52.800000000000004,
        53.900000000000006,
        55.00000000000001,
        56.1,
        57.2,
        58.300000000000004,
        59.400000000000006,
        60.50000000000001,
        61.60000000000001,
        62.7,
        63.800000000000004,
        64.9,
        66,
        67.10000000000001,
        68.2,
        69.30000000000001,
        70.4,
        71.5,
        72.60000000000001,
        73.7,
        74.80000000000001,
        75.9,
        77,
        78.10000000000001,
        79.2,
        80.30000000000001,
        81.4,
        82.5,
        83.60000000000001,
        84.7,
        85.80000000000001,
        86.9,
        88,
        89.10000000000001,
        90.2,
        91.30000000000001,
        92.4,
        93.50000000000001,
        94.60000000000001,
        95.7,
        96.80000000000001,
        97.9,
        99.00000000000001,
        100.10000000000001,
        101.2,
        102.30000000000001,
        103.4,
        104.50000000000001,
        105.60000000000001,
        106.7,
        107.80000000000001,
        108.9
      ]
    },
    \\"nested\\":{\\"hello\\":'hapi'},
    \\"booleans\\":{\\"false\\":false,\\"true\\":true}
  },
  \\"otherTypes\\":{
    \\"undefined\\":undefined,
    \\"error\\":new Error('bad'),
    \\"regexp\\":new RegExp('.*\\\\\\\\n', 'g'),
    \\"symbol\\":Symbol('Waddams'),
    \\"map\\":new Map([['key1','value1'],['key2','value2']]),
    \\"set\\":new Set([1,2,3]),
    \\"date\\":new Date('1995-12-17T10:24:00.000Z'),
    \\"numbers\\":[NaN,Infinity,-Infinity,-0],
    \\"void\\":undefined
  },
  \\"objects\\":{\\"instance\\":{\\"value\\":'Hello',\\"_value\\":'World'}},
  \\"deep\\":{\\"a\\":{\\"b\\":{\\"c\\":{\\"d\\":{\\"e\\":[{\\"f\\":[]}]}}}}},
  \\"weird\\":{\\"a\\\\t\\\\n\\\\n\\\\tb\\":'value'}
}"
`;

exports[`json snapshot 1`] = `
"{
  \\"json\\":{
    \\"null\\":null,
    \\"integer\\":1580349408812,
    \\"float\\":0.4852754432812123,
    \\"strings\\":{
      \\"empty\\":\\"\\",
      \\"string\\":\\"foo\\",
      \\"multiline\\":\\"\\\\n        This\\\\n        is\\\\n        multiline\\\\n      \\",
      \\"longText\\":\\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fermentum suscipit hendrerit. In elit urna, suscipit sed auctor et, maximus eget nibh. Duis sollicitudin odio nisi, eu eleifend nunc molestie non. Curabitur dignissim viverra ullamcorper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent faucibus at mauris sed lacinia. Morbi tincidunt purus non facilisis lobortis. Donec molestie massa eu lacus dictum eleifend. Suspendisse vel dolor laoreet diam congue hendrerit. Aenean sed luctus lacus, ultricies faucibus dolor.\\"
    },
    \\"arrays\\":{
      \\"empty\\":[],
      \\"array\\":[\\"one\\",\\"two\\",\\"three\\"],
      \\"bigarray\\":[
        0,
        1.1,
        2.2,
        3.3000000000000003,
        4.4,
        5.5,
        6.6000000000000005,
        7.700000000000001,
        8.8,
        9.9,
        11,
        12.100000000000001,
        13.200000000000001,
        14.3,
        15.400000000000002,
        16.5,
        17.6,
        18.700000000000003,
        19.8,
        20.900000000000002,
        22,
        23.1,
        24.200000000000003,
        25.3,
        26.400000000000002,
        27.500000000000004,
        28.6,
        29.700000000000003,
        30.800000000000004,
        31.900000000000002,
        33,
        34.1,
        35.2,
        36.300000000000004,
        37.400000000000006,
        38.5,
        39.6,
        40.7,
        41.800000000000004,
        42.900000000000006,
        44,
        45.1,
        46.2,
        47.300000000000004,
        48.400000000000006,
        49.50000000000001,
        50.6,
        51.7,
        52.800000000000004,
        53.900000000000006,
        55.00000000000001,
        56.1,
        57.2,
        58.300000000000004,
        59.400000000000006,
        60.50000000000001,
        61.60000000000001,
        62.7,
        63.800000000000004,
        64.9,
        66,
        67.10000000000001,
        68.2,
        69.30000000000001,
        70.4,
        71.5,
        72.60000000000001,
        73.7,
        74.80000000000001,
        75.9,
        77,
        78.10000000000001,
        79.2,
        80.30000000000001,
        81.4,
        82.5,
        83.60000000000001,
        84.7,
        85.80000000000001,
        86.9,
        88,
        89.10000000000001,
        90.2,
        91.30000000000001,
        92.4,
        93.50000000000001,
        94.60000000000001,
        95.7,
        96.80000000000001,
        97.9,
        99.00000000000001,
        100.10000000000001,
        101.2,
        102.30000000000001,
        103.4,
        104.50000000000001,
        105.60000000000001,
        106.7,
        107.80000000000001,
        108.9
      ]
    },
    \\"nested\\":{\\"hello\\":\\"hapi\\"},
    \\"booleans\\":{\\"false\\":false,\\"true\\":true}
  },
  \\"otherTypes\\":{
    \\"error\\":{},
    \\"regexp\\":{},
    \\"map\\":{},
    \\"set\\":{},
    \\"date\\":\\"1995-12-17T10:24:00.000Z\\",
    \\"numbers\\":[NaN,Infinity,-Infinity,0]
  },
  \\"objects\\":{\\"instance\\":{\\"value\\":\\"Hello\\",\\"_value\\":\\"World\\"}},
  \\"deep\\":{\\"a\\":{\\"b\\":{\\"c\\":{\\"d\\":{\\"e\\":[{\\"f\\":[]}]}}}}},
  \\"weird\\":{\\"a\\\\t\\\\n\\\\n\\\\tb\\":\\"value\\"}
}"
`;

exports[`pretty snapshot 1`] = `
"{
  json: {
    null: null,
    integer: 1580349408812,
    float: 0.4852754432812123,
    strings: {
      empty: '',
      string: 'foo',
      multiline: '\\\\n        This\\\\n        is\\\\n        multiline\\\\n      ',
      longText: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fer ... us dolor.'
    },
    arrays: {
      empty: [ ],
      array: [ 'one', 'two', 'three' ],
      bigarray: [
        0,
        1.1,
        2.2,
        3.3000000000000003,
        4.4,
        5.5,
        6.6000000000000005,
        7.700000000000001,
        8.8,
        9.9,
        11,
        12.100000000000001,
        13.200000000000001,
        14.3,
        15.400000000000002,
        16.5,
        17.6,
        18.700000000000003,
        19.8,
        ...
      ]
    },
    nested: { hello: 'hapi' },
    booleans: { false: false, true: true }
  },
  otherTypes: {
    undefined: undefined,
    error: Error: bad,
    regexp: /.*\\\\n/g,
    symbol: Symbol(Waddams),
    function: [ƒ Yes],
    map: Map(2) { key1 => 'value1', key2 => 'value2' },
    set: Set(3) { 1, 2, 3 },
    date: Sun Dec 17 1995 03:24:00 GMT-0700 (Mountain Standard Time),
    numbers: [ NaN, Infinity, -Infinity, -0 ],
    void: undefined
  },
  objects: { class: [class: Foo], instance: Foo { value: 'Hello' } },
  deep: { a: { b: { c: {...} } } },
  weird: { \\"a\\\\t\\\\n\\\\n\\\\tb\\": 'value' }
}"
`;

exports[`prettyColors snapshot 1`] = `
"[1m[37m{[39m[22m
[1m[37m  json: [1m[37m{[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  null: [1m[31mnull[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  integer: [1m[34m1580349408812[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  float: [1m[34m0.4852754432812123[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  strings: [1m[37m{[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  empty: [33m''[39m[37m[37m[37m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  string: [33m'foo'[39m[37m[37m[37m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  multiline: [33m'\\\\n        This\\\\n        is\\\\n        multiline\\\\n      '[39m[37m[37m[37m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  longText: [33m'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fer ... us dolor.'[39m[37m[37m[37m[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m}[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  arrays: [1m[37m{[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  empty: [ ],[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  array: [ [33m'one'[39m[37m[37m[37m, [33m'two'[39m[37m[37m[37m, [33m'three'[39m[37m[37m[37m ],[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  bigarray: [[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m0[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m1.1[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m2.2[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m3.3000000000000003[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m4.4[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m5.5[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m6.6000000000000005[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m7.700000000000001[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m8.8[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m9.9[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m11[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m12.100000000000001[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m13.200000000000001[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m14.3[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m15.400000000000002[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m16.5[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m17.6[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m18.700000000000003[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    [1m[34m19.8[39m[37m[37m[37m[22m[1m[1m[1m,[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m    ...[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m  ][39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  [1m[37m}[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  nested: [1m[37m{ hello: [33m'hapi'[39m[37m[37m[37m }[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  booleans: [1m[37m{ false: [1m[31mfalse[39m[37m[37m[37m[22m[1m[1m[1m, true: [1m[31mtrue[39m[37m[37m[37m[22m[1m[1m[1m }[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m}[39m[37m[22m[1m,[39m[22m
[1m[37m  otherTypes: [1m[37m{[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  undefined: [7m[31mundefined[39m[37m[37m[27m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  error: [31mError: bad[39m[37m[37m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  regexp: [35m/.*\\\\n/g[39m[37m[37m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  symbol: [1m[35mSymbol(Waddams)[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  function: [36m[ƒ Yes][39m[37m[37m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  map: Map(2) { key1 => [33m'value1'[39m[37m[37m, key2 => [33m'value2'[39m[37m[37m },[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  set: Set(3) { [1m[34m1[39m[37m[37m[22m[1m[1m, [1m[34m2[39m[37m[37m[22m[1m[1m, [1m[34m3[39m[37m[37m[22m[1m[1m },[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  date: [32mSun Dec 17 1995 03:24:00 GMT-0700 (Mountain Standard Time)[39m[37m[37m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  numbers: [[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m    [1m[34mNaN[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m    [1m[34mInfinity[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m    [1m[34m-Infinity[39m[37m[37m[22m[1m[1m,[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m    [1m[34m-0[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  ],[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  void: [7m[31mundefined[39m[37m[37m[27m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m}[39m[37m[22m[1m,[39m[22m
[1m[37m  objects: [1m[37m{ class: [36m[class: Foo][39m[37m[37m, instance: Foo { value: [33m'Hello'[39m[37m[37m } }[39m[37m[22m[1m,[39m[22m
[1m[37m  deep: [1m[37m{[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m  a: [1m[37m{ b: [1m[37m{ c: [1m[37m{...}[39m[37m[37m[37m[37m[22m[1m[1m[1m[1m }[39m[37m[37m[37m[22m[1m[1m[1m }[39m[37m[37m[22m[1m[1m[39m[37m[22m[1m[39m[22m
[1m[37m  [1m[37m}[39m[37m[22m[1m,[39m[22m
[1m[37m  weird: [1m[37m{ \\"a\\\\t\\\\n\\\\n\\\\tb\\": [33m'value'[39m[37m[37m }[39m[37m[22m[1m[39m[22m
[1m[37m}[39m[22m"
`;
